--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/mongoose": "^5.10.2",
     "apollo-server-express": "^2.19.0",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
