--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express-graphql": "^0.12.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.5",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.8",
