--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node index.js"
+    "start": "nodemon --exec babel-node index.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/mongoose": "^5.10.2",
     "apollo-server-express": "^2.19.0",
+    "babel-polyfill": "^6.26.0",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
+    "graphql": "^15.4.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb-memory-server": "^6.9.2",
     "mongoose": "^5.11.5",
     "nodemon": "^2.0.6",
     "uuid": "^8.3.2"
